# lbp-library

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md  README_CMAKE_USERS.txt  histogram.cpp  histogram.hpp  lbplibrary.hpp
package_lbp/: LBP.h
package_lbp/bglbp/: BGLBP.cpp  BGLBP.h
package_lbp/cslbp/: CSLBP.cpp  CSLBP.h
package_lbp/csldp/: CSLDP.cpp  CSLDP.h
package_lbp/cssiltp/: CSSILTP.cpp  CSSILTP.h
package_lbp/elbp/: ELBP.cpp  ELBP.h
package_lbp/oclbp/: OCLBP.cpp  OCLBP.h
package_lbp/olbp/: OLBP.cpp  OLBP.h
package_lbp/scslbp/: SCSLBP.cpp  SCSLBP.h
package_lbp/siltp/: SILTP.cpp  SILTP.h
package_lbp/varlbp/: VARLBP.cpp  VARLBP.h
package_lbp/xcslbp/: XCSLBP.cpp  XCSLBP.h
